Added security so routes can't be exploited

--- a/src/main/resources/templates/admin-partner.html
+++ b/src/main/resources/templates/admin-partner.html
@@ -21,7 +21,7 @@
             if (route == "potentialPartners"){
                 var button = document.createElement("td");
                 var link = document.createElement("a");
-                link.href='/partner/' + value['organisation_id'];
+                link.href='/admin/partner/' + value['organisation_id'];
                 var shareButton = document.createElement("button");
                 shareButton.type="button";
                 shareButton.className = "btn btn-primary";
